--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ APP_SECRET=ffa6be14a734e5b3af95156d10c8400a
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://root:@db:3306/my_database?serverVersion=5.7"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/db_todolist?serverVersion=5.7"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/db_todolist?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
